[tool.poetry]
name = "wow-dps-optimizer"
version = "0.1.0"
description = ""
authors = ["Rafael Henrique da Silva Correia <rafael@abraseucodigo.com.br>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.6.3"
prettyconf = "^2.2.1"
aiohttp = "^3.7.4"
belogging = "^0.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.1"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.11.1"
pytest-deadfixtures = "^2.2.1"
pytest-envvars = "^1.2.1"
pytest-randomly = "^3.7.0"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
